@@ -1,6 +1,6 @@
-Date: 2025-04-19
+Date: 2025-04-21
 Package: CHNOSZ
-Version: 2.1.0-52
+Version: 2.1.0-53
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
